<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up"
    android:orientation="vertical">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/email_text" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_login"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/email_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        app:elevation="16dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/password_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:hintEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        app:elevation="16dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:hintEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="226dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_sing_in_light"
        android:drawablePadding="8dp"
        android:padding="0dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#F3EED9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_have_acc"
        style="@style/BottomButtonLight"
        android:layout_width="wrap_content"
        android:text="@string/have_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>